--- a/css/commercial.css
+++ b/css/commercial.css
@@ -51,5 +51,4 @@ hr {
 
 .imgRotate1:hover, .imgRotate2:hover {
     animation: spin 1s infinite alternate-reverse ease-in-out;
-    background-color: yellow;
 }
